--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,10 @@ __pycache__/
 # C extensions
 *.so
 
+# JS
+node_modules/
+package-lock.json
+
 # Distribution / packaging
 .Python
 build/
@@ -160,3 +164,7 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Bot related 
+bots/**/
+keys.json
