Added new skills and basic actions Added mcdata object for data parsing - collect_blocks - get_nearest_blocks - Updated .gitignore - Updated README.md

--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,9 @@ cython_debug/
 bots/**/
 keys.json
 
+# Minecraft Data from https://github.com/misode/mcmeta
+data/
+
 # Super secret AGI
 himiko.py
 himiko.json
