--- a/.gitignore
+++ b/.gitignore
@@ -169,6 +169,11 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+# ViaProxy
+services/viaproxy
+./viaproxy
+
+
 # Bot related 
 bots/**/
 keys.json
@@ -180,3 +185,6 @@ data/
 himiko.py
 himiko.json
 himiko/
+vail.py
+vail.json
+vail/
